<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">picture3D</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_gesture_test">GestureTest</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="back">BACK</string>
    <string name="menu">MENU</string>
    <string name="make_photo">Take a photo</string>
    <string name="set_wallpaper">Set to Wallpaper</string>
    <string name="load_photo">Load photo</string>
    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="dimension">Quality</string>
    <string name="square_mode">Set square polygons mode</string>
    <string name="rectangle_mode">Set rectangle polygons mode</string>
    <string name="sq_dimension">polygons edges</string>


    <string name="title_activity_load_picture">LoadPictureActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

</resources>
